# MMSR-project

./: .gitignore  README.md  app.py  pyproject.toml
dev/: Dataset.ipynb  download_dataset.ipynb  task_2_ndcg_tradeoff.ipynb  tradeoff.csv
dev/data/: trade-off-results.json
services/: common.py
services/data/: DatasetLoader.py  __init__.py
services/metrics/: MetricCalculator.py  __init__.py
services/mmrs/: MultiMediaRetrievalSystem.py  __init__.py
templates/: index.html
